@@ -2,6 +2,9 @@ man-db (2.4.4-2) UNRELEASED; urgency=low
 
   * Update debconf translations:
     - Catalan (thanks, Jordà Polo; closes: #412304).
+  * Backport from upstream:
+    - src/lexgrog.l: Break whatis definitions at .IP, .HP, .RS, and .RE
+      (thanks to Ori Avtalion for the report).
 
  -- Colin Watson <cjwatson@debian.org>  Sun, 25 Feb 2007 16:54:32 +0000
 
